to delpoy test 2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <textarea id="debugOutput" readonly></textarea>
 
-  <script src="polluSensSerial.js"></script>
+  <script src="polluSens.js"></script>
   <script>
     const select = document.getElementById('sensorSelect');
     const debug = document.getElementById('debugOutput');
